engine-net-2/examples/Errors/MatchMemberUnknown.grs
new graph "Rules.grg"

exec (n:N)=init ;> { m:match<t>=[?t][0]; v:int = m.b } 

quit
